# AtomisticSkills

./: .atomistic_skills.yaml.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  HPC_MODULE_CHECKPOINT.md  LICENSE  README.md  SECURITY_FIX_CHECKPOINT.md  SECURITY_REPORT.md  api_keys.yaml.template  configure_astrbot.py  configure_mcp.py  create_lzc.py  debug_extraction.py  mcp_config.json  pixi.toml  pyproject.toml  pytest.ini  server.json
.agent/: agent-examples.md
.agent/rules/: antigravity-terminal-hang-bug.md  coding-standards.md  fine-tuning-hyperparams.md  foundation-potentials.md  mcp-environments.md  molecular-dynamics.md  overview.md  plot-standards.md  research-standards.md  skill-standards.md  stress-units.md  workflow-standards.md
.agent/test/: verify_model_loading.py
.agent/workflows/: benchmark-fine-tune-mlip.md  benchmark-finetuning.md  diffusion_coefficient_and_activation_energy.md  fine-tune-alloy-properties.md  generative-halide-discovery.md  hierarchical-screening-alkaline-stability.md  materials-discovery.md  melting-temperature.md  sorption-discovery.md
.agents/rules/: coding-standards.md  hpc-standards.md  mcp-environments.md  overview.md  (+5 more)
conda-envs/: base-agent.yml  mace-agent.yml  matgl-agent.yml  mlip-agent.yml
docs/: api_key_guide.md  astrbot-integration.md  atomate2_remote_worker_setup.md  build_dgl_generic.sh  developer_guide.md  environment_variables.md  hpc_job_submission.md  matgl_env_setup.md  mcp_stdio_redirection.md  openclaw-integration.md  remote_submission_setup.md  setup.md  skill_mcp_workflow_map.md  visualize_structure.md
site/: build_skills.py  build_workflows_inject.py  developer_guide.html  environment_variables.html  index.html  mcp_stdio_redirection.html  openclaw-integration.html  setup.html  skills_index.js  visualize_structure.html
src/: cli.py
tests/: README.md  conftest.py  test_atomate2_remote.py  test_fairchem_server.py  test_mace_server.py  test_matgl_server.py  test_md_utils.py  test_smol_enumeration.py
(+2428 files in other folders)
